--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.container {
+    position: sticky;
+    top:0;
+    background-color: white;
+}
+
 .navbar ul {
     list-style-type: none;
     padding: 0px;
@@ -43,10 +49,15 @@ main {
     color: rgb(109, 109, 109);
 }
 
-#home {
-    padding-top: 200px;
+h3 {
     font-size: 100px;
+    text-align: center;
+}
+
+#Home {
+    padding-top: 200px;
     display: flex;
+    padding-left: 100px;
     justify-content: space-between;
 }
 
@@ -57,4 +68,15 @@ main {
 }
 #short-blurb {
     margin-top: -120px;
+}
+
+#Skills {
+    margin-top: 500px;
+    display: flex;
+    width: 100px;
+    height: 100px;
+}
+
+html {
+    scroll-behavior: smooth;
 }
