--- a/style.css
+++ b/style.css
@@ -58,13 +58,14 @@ h3 {
     padding-top: 200px;
     display: flex;
     padding-left: 100px;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 #allen-headshot {
     width: 400px;
     height: 400px;
     border-radius: 200px;
+    
 }
 #short-blurb {
     margin-top: -120px;
@@ -85,4 +86,43 @@ h3 {
 
 html {
     scroll-behavior: smooth;
+}
+
+#skills-blurb {
+  text-align: center;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+   font-size: 20px;
+   margin-top: -90px;
+   padding-bottom: 100px;
+}
+
+#project1 {
+    width: 300px;
+    height: 400px;
+    border: 4px solid black;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#project1-photo {
+    width: 100%;
+    display: block;
+    border-radius: 9px;
+}
+
+#project-title {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: -10px;
+    margin-top: 0;
+    
+}
+
+#project-description {
+    padding-bottom: 40px;
+    text-align: center;
 }
