--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     background-color: white;
 }
 
+
+
 .navbar ul {
     list-style-type: none;
     padding: 0px;
@@ -52,6 +54,7 @@ main {
 h3 {
     font-size: 100px;
     text-align: center;
+    margin-top: 100px;
 }
 
 #Home {
@@ -77,6 +80,7 @@ h3 {
     height: 100px;
     margin: auto;
     justify-content: center;
+    margin-bottom: 200px;
 
 }
 
@@ -98,7 +102,12 @@ html {
    padding-bottom: 100px;
 }
 
-#project1 {
+#Projects {
+    justify-content: space-around;
+    display: flex;
+}
+
+#project1, #project2, #project3  {
     width: 300px;
     height: 400px;
     border: 4px solid black;
@@ -108,13 +117,13 @@ html {
     align-items: center;
 }
 
-#project1-photo {
+#project1-photo, #project2-photo, #project3-photo  {
     width: 100%;
     display: block;
     border-radius: 9px;
 }
 
-#project-title {
+#project-title, #project2-title, #project3-title   {
     text-align: center;
     font-size: 30px;
     margin-bottom: -10px;
@@ -122,7 +131,19 @@ html {
     
 }
 
-#project-description {
+#project-description, #project2-description, #project3-description  {
     padding-bottom: 40px;
     text-align: center;
+}
+
+#project2-photo {
+    height: 210px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
